--- a/angular.json
+++ b/angular.json
@@ -121,8 +121,13 @@
               "devServerTarget": "test-deploy:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "test-deploy"
 }
